--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body background="background1.jpg">
         <center>
-            <div class="btn btn-warning">
+            <div class="btn btn-warning heading">
                 <h3>AI Ping Pong Game</h3>
                 <button class="btn btn-info" data-toggle = "modal" data-target="#myModal">Instruction</button>
             </div>
@@ -26,8 +26,17 @@
             <h3 id="status" class="btn btn-primary"></h3>
             <br><br>
             <div id = "canvas"></div>
-        </center>
-
-        <script src="main.js"></script>
+            <br><br>
+            <button class="btn btn-warning" id = "restart" onclick="restart()"></button>
+            <br><br>
+            <h4>Developed By Jeevansh Grover</h4>
+            <div id="myModal" class="modal fade">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button class="close" data-dismiss="modal">&times;</button>
+                        <h4>Instruction</h4>
+                        <div class="modal-body">
+            </div>
     </body>
 </html>
