--- a/index.html
+++ b/index.html
@@ -39,5 +39,7 @@
                         <div class="modal-body">
             </div>
     </body>
-    <script src="main.js"
+    <script src="main.js">
+        
+    </script>
 </html>
